--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.password=
 #spring.datasource.password=root
 
 
+spring.main.allow-circular-references=true
 
 spring.jpa.hibernate.ddl-auto=update
 
@@ -21,11 +22,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-#spring.datasource.url=jdbc:mysql://prodsif-haproxy1.infra.umontpellier.fr/e20210001223
-#spring.datasource.username=e20210001223
-#spring.datasource.password=123
 
-#test
+
 
 
 
