--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 #spring.datasource.username=e20210001223
 #spring.datasource.password=123
 
-#test
+#lijuan
 
 
 
