--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/ProjetJavaEE
-#spring.datasource.username=root
-#spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/ProjetJavaEE
+spring.datasource.username=root
+spring.datasource.password=
 
 
 #spring.datasource.url=jdbc:mysql://prodsif-haproxy1.infra.umontpellier.fr/e20210001223
@@ -8,9 +8,9 @@
 #spring.datasource.password=123
 
 
-spring.datasource.url=jdbc:mysql://localhost:8889/ProjetJavaEE
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:8889/ProjetJavaEE
+#spring.datasource.username=root
+#spring.datasource.password=root
 
 
 spring.main.allow-circular-references=true
@@ -24,11 +24,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
-#spring.datasource.url=jdbc:mysql://prodsif-haproxy1.infra.umontpellier.fr/e20210001223
-#spring.datasource.username=e20210001223
-#spring.datasource.password=123
 
-#lijuan
+
 
 
 
