--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.datasource.url=jdbc:mysql://prodsif-haproxy1.infra.umontpellier.fr/e20210001223
 spring.datasource.username=e20210001223
 spring.datasource.password=123
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
