--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ProjetJavaEE
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/ProjetJavaEE
+#spring.datasource.username=root
+#spring.datasource.password=
 
 
-#spring.datasource.url=jdbc:mysql://prodsif-haproxy1.infra.umontpellier.fr/e20210001223
-#spring.datasource.username=e20210001223
-#spring.datasource.password=123
+spring.datasource.url=jdbc:mysql://prodsif-haproxy1.infra.umontpellier.fr/e20210001223
+spring.datasource.username=e20210001223
+spring.datasource.password=123
 
 
 #spring.datasource.url=jdbc:mysql://localhost:8889/ProjetJavaEE
