--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/ProjetJavaEE
-#spring.datasource.username=root
-#spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/ProjetJavaEE
+spring.datasource.username=root
+spring.datasource.password=
 
 
-spring.datasource.url=jdbc:mysql://prodsif-haproxy1.infra.umontpellier.fr/e20210001223
-spring.datasource.username=e20210001223
-spring.datasource.password=123
+#spring.datasource.url=jdbc:mysql://prodsif-haproxy1.infra.umontpellier.fr/e20210001223
+#spring.datasource.username=e20210001223
+#spring.datasource.password=123
 
 
 #spring.datasource.url=jdbc:mysql://localhost:8889/ProjetJavaEE
@@ -17,7 +17,7 @@ spring.main.allow-circular-references=true
 
 spring.jpa.hibernate.ddl-auto=update
 
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
