--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ProjetJavaEE
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/ProjetJavaEE
+#spring.datasource.username=root
+#spring.datasource.password=
 
 
 #spring.datasource.url=jdbc:mysql://prodsif-haproxy1.infra.umontpellier.fr/e20210001223
@@ -8,12 +8,12 @@ spring.datasource.password=
 #spring.datasource.password=123
 
 
-#spring.datasource.url=jdbc:mysql://localhost:8889/ProjetJavaEE
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:8889/ProjetJavaEE
+spring.datasource.username=root
+spring.datasource.password=root
 
 
-#spring.main.allow-circular-references=true
+spring.main.allow-circular-references=true
 
 spring.jpa.hibernate.ddl-auto=update
 
@@ -25,8 +25,8 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 
 #accès utilisateur par défaut
-spring.security.user.name=test
-spring.security.user.password=test
+#spring.security.user.name=test
+#spring.security.user.password=test
 
 
 
