--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,8 +26,8 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 
 #acces utilisateur par defaut
-spring.security.user.name=test
-spring.security.user.password=test
+#spring.security.user.name=test
+#spring.security.user.password=test
 
 
 
